Commit tons of work in hypothesis testing review notebook. almost done.

--- a/probability_distributions_review.ipynb
+++ b/probability_distributions_review.ipynb
@@ -209,8 +209,9 @@
     "\n",
     "<code style=\"background:yellow;color:black\">Examples:</code>\n",
     "\n",
-    "An event happens, on average, x times per hour.\n",
-    "What are the staffing requirements for a company during a peak time? (restaurant, phone bank, etc.) (The number of phone calls received by a call center per hour.)"
+    "- How many junk emails do I receive in a day? (An event happens, on average, x times per hour.)\n",
+    "\n",
+    "- What are the staffing requirements for a company during a peak time? (restaurant, phone bank, etc.) (The number of phone calls received by a call center per hour.)"
    ]
   },
   {
