Commit first new draft complete

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We use hypothesis tests to draw conclusions, answer questions, or interpret beliefs we have about a population using sample data.\n",
+    "- Hypothesis tests are used to draw conclusions, answer questions, or interpret beliefs we have about a population using sample data.\n",
     "\n",
     "\n",
     "- A hypothesis test evaluates two mutually exclusive statements about a population and informs us which statement is best supported by our sample data.\n",
@@ -137,14 +137,14 @@
     "- A Type I Error is a False Positive, which we can think of as sounding a false alarm.\n",
     "\n",
     "\n",
-    "- We predict there is a difference or a relationship when in reality there is no difference or no relationship.\n",
+    "- I predict there is a difference or a relationship when in reality there is no difference or no relationship.\n",
     "\n",
     "\n",
-    "- We reject the Null hypothesis when the Null hypothesis is actually True.\n",
+    "- I reject the Null hypothesis when the Null hypothesis is actually True.\n",
     "\n",
     "**<font color=orange>So What?</font>**\n",
     "\n",
-    "- If we are trying to determine whether a customer will churn, and our **model predicts that they will churn (positive for churn)**, but **they do not end up churning (we made a False prediction)**, this is a **False Positive**. We may have wasted time and money trying to woo a customer who was not going to leave us anyway."
+    "- If I am trying to determine whether a customer will churn, and my **model predicts that they will churn (positive for churn)**, but **they do not end up churning (we made a False prediction)**, this is a **False Positive**. I may have wasted time and money trying to woo a customer who was not going to leave anyway."
    ]
   },
   {
@@ -154,21 +154,21 @@
    "source": [
     "#### <font color=red>What is a Type II Error?</font>\n",
     "\n",
-    "- A Type II Error is a False Negative, which we can think of as a miss. We missed identifying a real difference or relationship that exists in reality.\n",
+    "- A Type II Error is a False Negative, which I can think of as a miss; I missed identifying a real difference or relationship that exists in reality.\n",
     "\n",
     "\n",
-    "- We predict that there is no difference or relationship when in reality there is a difference or relationship.\n",
+    "- I predict that there is no difference or relationship when in reality there is a difference or relationship.\n",
     "\n",
     "\n",
-    "- We fail to reject the Null hypothesis when the Null hypothesis is actually false.\n",
+    "- I fail to reject the Null hypothesis when the Null hypothesis is actually false.\n",
     "\n",
     "**<font color=orange>So What?</font>**\n",
     "\n",
-    "- If we are trying to determine whether a customer will churn, and our **model predicts that they will not churn (negative for churn)**, but **they end up churning (we made a False Prediction)**, this is a **False Negative**. We may have lost the opportunity to woo a customer that was going to leave us before they left.\n",
+    "- If I am trying to determine whether a customer will churn, and my **model predicts that they will not churn (negative for churn)**, but **they end up churning (we made a False Prediction)**, this is a **False Negative**. I may have lost the opportunity to woo a customer that was going to leave, before they left.\n",
     "\n",
     "**<font color=green>Now What?</font>**\n",
     "\n",
-    "- In practice, if we create a classification model to predict customer churn, we can decide how to balance our Type I and Type II Errors to have a model that suits our needs. In the instance of churn, which type of error would be more costly to the Telco company: a Type I Error or a Type II Error? Which would be more costly if we were trying to determine if a shadow in an x-ray were cancer?"
+    "- In practice, if I create a classification model to predict customer churn, I can decide how to balance Type I and Type II Errors to have a model that suits my needs. In the instance of churn, which type of error would be more costly to the Telco company: a Type I Error or a Type II Error? Which would be more costly if I was trying to determine if a shadow in an x-ray were cancer?"
    ]
   },
   {
@@ -189,20 +189,26 @@
     "- A type of inferential statistic used to determine if there is a significant difference between the means of two groups which may be related in certain features.\n",
     "\n",
     "\n",
-    "- It compares a categorical and a continuous variable by comparing the mean of the continuous variable by subgroups or the mean of a subgroup to the mean of the population.\n",
-    "    \n",
+    "- It compares a categorical and a continuous variable by comparing the mean of the continuous variable by subgroups or the mean of a subgroup to the mean of the population."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <font color=orange>So What?</font>\n",
     "\n",
-    "We can ask questions like:\n",
-    "\n",
-    "- **One Sample T-test** is when we compare the mean for a subgroup to the population mean.\n",
+    "- **One Sample T-test** is when I compare the mean for a subgroup to the population mean.\n",
     "   \n",
     "   >Are sales for group A higher when we run a promotion? \n",
     "   \n",
-    "- **Two Sample T-test** is when we compare the mean of one subgroup to the mean of another subgroup.\n",
-    "  \n",
-    "   >Do customers who receive a promotion spend more money than those who don't?\n",
-    "        \n",
+    "- **Two Sample T-test** is when we compare the mean of one subgroup to the mean of another subgroup."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <font color=green>Now What?</font>\n",
     "```python\n",
     "# Set confidence level.\n",
@@ -212,10 +218,10 @@
     "alpha = 1 - confidence_level\n",
     "```\n",
     "\n",
-    "- If your p-value is higher than your alpha, you fail to reject your Null Hypothesis. \n",
+    "- If the p-value is higher than your alpha, I fail to reject the Null Hypothesis. \n",
     "\n",
     "\n",
-    "- If your p-value is lower than your alpha, you reject your Null Hypothesis."
+    "- If the p-value is lower than the alpha, I reject the Null Hypothesis."
    ]
   },
   {
@@ -245,7 +251,7 @@
     "\n",
     "___\n",
     "\n",
-    "**A one-tailed test** looks for a specific difference: appropriate if you only want to determine if there is a difference between groups in a specific direction, positive only or negative only.\n",
+    "**A one-tailed test** looks for a specific difference: appropriate if I only want to determine if there is a difference between groups in a specific direction, positive only or negative only.\n",
     "\n",
     "```python\n",
     "# Check one-tailed test for significance in positive direction. (greater than)\n",
@@ -267,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A two-tailed test** looks for any difference: appropriate if you want to test for significance without concern for a positive or negative direction.\n",
+    "**A two-tailed test** looks for any difference: appropriate if I want to test for significance without concern for a positive or negative direction.\n",
     "\n",
     "```python\n",
     "# Check a two-tailed test for significance, non-directional.\n",
@@ -447,10 +453,10 @@
    "source": [
     "##### Mean and Median \n",
     "\n",
-    "- The distribution is right-skewed, so we see below the mean is slightly higher than the median.\n",
+    "- The distribution is slightly right-skewed, so I'll do a quick comparison of the mean and median of `df.tip`.\n",
     "\n",
     "\n",
-    "- So, let's do a quick comparison of the mean and median of `df.tip`."
+    "- I can see below that the mean is slightly higher than the median. It's close enough to proceed, though."
    ]
   },
   {
@@ -1073,6 +1079,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Set Alpha for All Correlation Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set Confidence Interval and Alpha; check alpha.\n",
+    "\n",
+    "confidence_interval = .95\n",
+    "alpha = round(1 - confidence_interval, 2)\n",
+    "print(f'alpha = {alpha}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Calculate  p-value & t-statistic\n",
     "\n",
     "- Based on my calculated r and p-value, I reject the Null hypothesis. The r value informs us that there is a small positive correlation between tenure and monthly charges, and our p-value informs us that the finding is significant. \n",
@@ -1137,7 +1171,7 @@
    "source": [
     "##### Calculate  p-value & t-statistic\n",
     "\n",
-    "- Based on our r and p-value, we reject the Null hypothesis. There is a strong correlation, r = 0.83, between tenure and total charges.\n",
+    "- Based on the r and p-value, I reject the Null hypothesis. There is a strong correlation, r = 0.83, between tenure and total charges.\n",
     "\n",
     "\n",
     "- This is not surprising because total charges necessarily add up the longer a customer remain with the company, tenure. Our p-value of 0 informs us that the finding is significant."
@@ -1477,7 +1511,7 @@
    "source": [
     "##### Calculate  p-value & t-statistic\n",
     "\n",
-    "- I reject the Null hypothesis that there is no correlation between tenure and montlhy charges for customers who have Fiber and phone services based on our p-value being below our alpha of 0.05 and our r of 0.62. \n",
+    "- I reject the Null hypothesis that there is no correlation between tenure and montlhy charges for customers who have Fiber and phone services based on the p-value being below our alpha of 0.05 and our r of 0.62. \n",
     "\n",
     "\n",
     "- There is a positive correlation between tenure and monthly charges for customers with Fiber and phone service."
@@ -1533,7 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=red>What is a Chi Square test?</font>**\n",
+    "### <font color=red>What is a Chi Square test?</font>\n",
     "\n",
     "- The Chi Square test is used to determine whether there is a statistically significant difference between the expected and observed frequencies in one or more categories. Observations are classfied into mutually exclusive classes. In other words, it is a way of testing for group membership."
    ]
@@ -1755,10 +1789,10 @@
    "source": [
     "##### Calculate  p-value\n",
     "\n",
-    "- I fail to reject the Null hypothesis that whether a person is a smoker is independent of his/her sex based on our p-value being above our alpha. \n",
+    "- I fail to reject the Null hypothesis that whether a person is a smoker is independent of his/her sex based on the p-value being above our alpha. \n",
     "\n",
     "\n",
-    "- Our $x^2$ test informs us that the two categories, smoker and sex, are independent."
+    "- Our $x^2$ test informs me that the two categories, smoker and sex, are independent."
    ]
   },
   {
@@ -1970,7 +2004,7 @@
    "source": [
     "##### Calculate  p-value\n",
     "\n",
-    "- I reject the Null hypothesis that whether a person churns is independent of the package type they purchase based on our p-value being below our alpha. \n",
+    "- I reject the Null hypothesis that whether a person churns is independent of the package type they purchase based on the p-value being below the set alpha. \n",
     "\n",
     "\n",
     "- My $x^2$ test informs me that the two categories, package and churn, are not independent."
