Commit second edit complete for both review notebooks.

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -52,7 +52,11 @@
     "\n",
     "$H_0$: There is no difference between smokers' tips and the overall population's tip average.\n",
     "\n",
-    "$H_a$: There is a difference between smokers' tips and the overall population's tip average."
+    "$H_a$: There is a difference between smokers' tips and the overall population's tip average.\n",
+    "\n",
+    "- After running and interpreting the values returned by the appropriate statistical test for my data, I will either fail to reject or reject the Null Hypothesis.\n",
+    "\n",
+    "[Here](https://online.stat.psu.edu/statprogram/reviews/statistical-concepts/hypothesis-testing/p-value-approach) is a simple, yet detailed explanation of this process if you need a little more."
    ]
   },
   {
@@ -95,7 +99,7 @@
     "- **a confidence level** is the probability that if a poll/test/survey were repeated over and over again, the results obtained would be the same. It conveys how confident we are in our results. Raising your confidence level lowers your chances of Type I Errors, or False Positives. (Common examples might be 90%, 95%, or 99%)\n",
     "\n",
     "\n",
-    "- **alpha** --> $a$ = 1 - confidence level. If your p-value is less than your $a$, which you set before you begin your test, then your test findings are significant. If it is close, it is at your discretion. Your results still may be significant even though slightly above your chosen cutoff. Also, alpha is the maximum probability that you have a Type I Error. \n",
+    "- **alpha** --> $a$ = 1 - confidence level. If the resulting p-value from the hypothesis test is less than the $a$, which you set before you begin the test, then the test findings are significant. If it is close, it is at your discretion. The results still may be significant even though slightly above your chosen cutoff. *Also, alpha is the maximum probability that you have a Type I Error.* \n",
     "\n",
     ">For a 95% confidence level, the value of alpha is .05 which means there is a 5% chance that you will make a Type I Error (False Positive) or reject a True Null hypothesis.\n",
     "\n",
@@ -134,7 +138,7 @@
    "source": [
     "#### <font color=red>What is a Type I Error?</font>\n",
     "\n",
-    "- A Type I Error is a False Positive, which we can think of as sounding a false alarm.\n",
+    "- A Type I Error is a False Positive, which I can think of as sounding a false alarm.\n",
     "\n",
     "\n",
     "- I predict there is a difference or a relationship when in reality there is no difference or no relationship.\n",
@@ -273,6 +277,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[source](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/#:~:text=For%20example%2C%20we%20may%20wish,mean%20significantly%20less%20than%20x.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**A two-tailed test** looks for any difference: appropriate if I want to test for significance without concern for a positive or negative direction.\n",
     "\n",
     "```python\n",
@@ -286,6 +297,13 @@
    "metadata": {},
    "source": [
     "<img src=https://i.pinimg.com/564x/74/ea/47/74ea47b60435e2f10fb5d3e946fbaf7f.jpg width=\"200\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[source](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/#:~:text=For%20example%2C%20we%20may%20wish,mean%20significantly%20less%20than%20x.)"
    ]
   },
   {
@@ -805,9 +823,23 @@
     "\n",
     ">**Positive Correlation:** both variables change in the same direction.\n",
     "\n",
-    ">**Neutral Correlation:** No relationship in the change of the variables.\n",
+    ">**Neutral or No Correlation:** No relationship in the change of the variables.\n",
     "\n",
     ">**Negative Correlation:** variables change in opposite directions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=https://i.pinimg.com/564x/77/c0/c2/77c0c282785031d9b0bcd9c029b91760.jpg width=\"500\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[source](https://lytongblog.wordpress.com/2018/12/21/correlation-between-two-variables/)"
    ]
   },
   {
@@ -834,7 +866,9 @@
     "1. Calculate the Pearson correlation coefficient, r.    \n",
     "2. Calculate the coresponding t-values.\n",
     "3. Test whether the t-values are significant or not, p-value.\n",
-    "4. We can use `r, p = stats.pearsonr(x,y)` to find r and p-values."
+    "\n",
+    "\n",
+    ">We can use `r, p = stats.pearsonr(x,y)` to find r and p-values."
    ]
   },
   {
@@ -1070,9 +1104,9 @@
     "\n",
     "- Does tenure correlate with monthly charges?\n",
     "\n",
-    ">$H_0$: There is no linear relationship between tenure and monthly charges.\n",
+    ">$H_0$: There is no linear correlation between tenure and monthly charges.\n",
     "\n",
-    ">$H_a$: There is a linear relationship between tenure and monthly charges."
+    ">$H_a$: There is a linear correlation between tenure and monthly charges."
    ]
   },
   {
@@ -1109,7 +1143,7 @@
    "source": [
     "##### Calculate  p-value & t-statistic\n",
     "\n",
-    "- Based on my calculated r and p-value, I reject the Null hypothesis. The r value informs us that there is a small positive correlation between tenure and monthly charges, and our p-value informs us that the finding is significant. \n",
+    "- Based on my calculated r and p-value, I reject the Null hypothesis. The r value informs us that there is a small positive linear correlation between tenure and monthly charges, and our p-value informs us that the finding is significant. \n",
     "\n",
     "\n",
     "- We can see from the low r value that the correlation, though significant, is not strong."
@@ -1160,9 +1194,9 @@
     "\n",
     "- Does tenure correlate with total charges? \n",
     "\n",
-    ">$H_0$: There is no linear relationship between tenure and total charges.\n",
+    ">$H_0$: There is no linear correlation between tenure and total charges.\n",
     "\n",
-    ">$H_a$: There is a linear relationship between tenure and total charges."
+    ">$H_a$: There is a linear correlation between tenure and total charges."
    ]
   },
   {
@@ -1222,9 +1256,9 @@
     "\n",
     "- What happens if I control for phone and internet service?\n",
     "\n",
-    ">$H_0$: There is no correlation between tenure and monthly charges for customers who don't have phone but do have DSL services.\n",
+    ">$H_0$: There is no linear correlation between tenure and monthly charges for customers who don't have phone but do have DSL services.\n",
     "\n",
-    ">$H_a$: There is a correlation between tenure and monthly charges for customers who don't have phone but do have DSL services."
+    ">$H_a$: There is a linear correlation between tenure and monthly charges for customers who don't have phone but do have DSL services."
    ]
   },
   {
@@ -1388,9 +1422,9 @@
    "source": [
     "##### Create Hypotheses\n",
     "\n",
-    ">$H_0$: There is no linear relationship between tenure and monthly_charges for customers with phone and Fiber services.\n",
+    ">$H_0$: There is no linear correlation between tenure and monthly charges for customers with phone and Fiber services.\n",
     "\n",
-    ">$H_a$: There is a linear relationship between tenure and monthly_charges for customers with phone and Fiber services."
+    ">$H_a$: There is a linear correlation between tenure and monthly charges for customers with phone and Fiber services."
    ]
   },
   {
