--- a/probability_distributions_review.ipynb
+++ b/probability_distributions_review.ipynb
@@ -45,8 +45,27 @@
    "source": [
     "### Uniform Distribution \n",
     "\n",
-    "allows us to model events where the outcome is discrete, and each outcome has an equally likely chance of occurring.\n",
-    "\n",
+    "allows us to model events where the outcome is discrete, and each outcome has an equally likely chance of occurring."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=https://i.pinimg.com/564x/75/15/97/751597c69c4ae10b67d90f6adefda14d.jpg width=\"300\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[source](https://corporatefinanceinstitute.com/resources/knowledge/other/uniform-distribution/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**<font color=red>What You Need</font>**\n",
     "\n",
     "1. Finite number of outcomes equally likely to happen.\n",
@@ -102,8 +121,27 @@
    "source": [
     "### Binomial Distribution \n",
     "\n",
-    "allows us to model the number of successes after a fixed number of trials, given a certain probability of success. This distribution assumes that each trial is independent. <font color=purple>(Discrete, fixed # of events.)</font>\n",
-    "\n",
+    "allows us to model the number of successes after a fixed number of trials, given a certain probability of success. This distribution assumes that each trial is independent. <font color=purple>(Discrete, fixed # of events.)</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=https://i.pinimg.com/564x/d7/5a/b9/d75ab9e43781677433bca8afd0096a58.jpg width=\"300\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[source](https://corporatefinanceinstitute.com/resources/knowledge/other/binomial-distribution/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**<font color=red>What You Need</font>**\n",
     "\n",
     "1. There are only two possible mutually exclusive outcomes.\n",
@@ -145,8 +183,27 @@
    "source": [
     "### Normal Distribution \n",
     "\n",
-    "allows us to model a continuous random variable where the further away from the mean you are, the less likely the outcome. Also known as a Gaussian Distribution.\n",
-    "\n",
+    "allows us to model a continuous random variable where the further away from the mean you are, the less likely the outcome. Also known as a Gaussian Distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=https://i.pinimg.com/564x/2a/45/57/2a45572ab815528745b83f82ed36d543.jpg width=\"300\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[source](https://corporatefinanceinstitute.com/resources/knowledge/other/normal-distribution/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**<font color=red>What You Need</font>**\n",
     "\n",
     "1. mean\n",
@@ -222,16 +279,25 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### PDF/PMF\n",
     "\n",
-    "**PDF** (Probability Density Function) / **PMF** (Probability Mass Function) - The probability that your random variable takes on an **EXACT** value.\n",
-    "\n",
-    "<img src=https://i.pinimg.com/originals/26/d4/df/26d4df44f322bc49272f29864a6e12c6.png width=\"300\">\n",
-    "\n",
+    "**PDF** (Probability Density Function) / **PMF** (Probability Mass Function) - The probability that your random variable takes on an **EXACT** value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=https://i.pinimg.com/originals/26/d4/df/26d4df44f322bc49272f29864a6e12c6.png width=\"300\" align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`distribution.pdf(probability/continuous)`\n",
     "\n",
     "`distribution.pmf(value/discrete)`"
@@ -245,7 +311,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,7 +333,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
