Commit tail edit

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -259,10 +259,10 @@
     "\n",
     "```python\n",
     "# Check one-tailed test for significance in positive direction. (greater than)\n",
-    "(p/2) < alpha and t > 0\n",
+    "(p/2) < alpha\n",
     "\n",
     "# Check one-tailed test for significance in negative direction. (less than)\n",
-    "(p/2) < alpha and t < 0\n",
+    "(p/2) < alpha\n",
     "```"
    ]
   },
