Commit addition of continuous to correlation def

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -815,7 +815,7 @@
    "source": [
     "### <font color=red>What is a correlation test?</font>\n",
     "\n",
-    "- Correlation is a statistical measure that describes how two variables are related and indicates that as one variable changes in value, the other variable tends to change in a specific direction. \n",
+    "- Correlation is a statistical measure that describes how two continuous variables are related and indicates that as one variable changes in value, the other variable tends to change in a specific direction. \n",
     "\n",
     ">**Positive Correlation:** both variables change in the same direction.\n",
     "\n",
