Commit source addition for error table

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -132,6 +132,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[source](https://online.stat.psu.edu/stat500/lesson/6a/6a.1#:~:text=When%20we%20fail%20to%20reject,the%20likelihood%20of%20these%20events.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <font color=red>What is a Type I Error?</font>\n",
     "\n",
     "- A Type I Error is a False Positive, which I can think of as sounding a false alarm.\n",
